[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/hanging_bat.png" type="Texture" id=1]
[ext_resource path="res://Assets/flying_bat2.png" type="Texture" id=2]
[ext_resource path="res://Assets/flying_bat1.png" type="Texture" id=3]
[ext_resource path="res://src/Actors/Bat.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "flying",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.97187, 3.55206 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.18064, 5.03371 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 60, 60 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.30247, 3.0501 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5, 5 )

[node name="Bat" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0.0701523, -1.45569 )
scale = Vector2( 0.403692, 0.654492 )

[node name="damageBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="damageBox"]
shape = SubResource( 3 )

[node name="playerDetect" type="Area2D" parent="."]
position = Vector2( 0, 38 )
collision_layer = 0
monitorable = false

[node name="playerD" type="CollisionShape2D" parent="playerDetect"]
position = Vector2( 0, 32 )
shape = SubResource( 4 )

[node name="StompDetector" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
modulate = Color( 0.0862745, 0.027451, 0.588235, 1 )
position = Vector2( 0, -5 )
shape = SubResource( 5 )

[node name="spiderWeb" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="spiderWeb"]
shape = SubResource( 6 )

[connection signal="area_entered" from="damageBox" to="." method="_on_damageBox_area_entered"]
[connection signal="body_entered" from="playerDetect" to="." method="_on_playerDetect_body_entered"]
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="area_entered" from="spiderWeb" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="spiderWeb" to="." method="_on_spiderWeb_area_exited"]
